fix: scrollbar zoom

--- a/tailwind.css
+++ b/tailwind.css
@@ -85,6 +85,22 @@
   white-space: break-spaces
 }
 
+*::-webkit-scrollbar {
+  width: 15px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #e0e0e0;
+  border-radius: 12px;
+}
+
+*::-webkit-scrollbar-thumb {
+  width: 15px;
+  background-color: #b4cbf0;
+  border-radius: 10px;
+  border: 3px solid #e0e0e0;
+}
+
 /*rolex*/
 @import url('https://fonts.cdnfonts.com/css/helvetica-neue-55');
 @import url('https://fonts.cdnfonts.com/css/georgia');
